--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Yael Ramírez - Desarrollador Web</title>
 </head>
 <body>
-    <h1>¡Hola! Soy Yael</h1>
+    <h1>¡Hola! Soy Yael Ramírez</h1>
     <p>Desarrollador Web Full Stack</p>
     <p>Aquí pronto estarán mis proyectos...</p>
 </body>
