--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yael Ramírez - Desarrollador Web</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yael Ramírez | Desarrollador Frontend</title>
 </head>
 <body>
-    <h1>¡Hola! Soy Yael Ramírez</h1>
-    <p>Desarrollador Web Full Stack</p>
-    <p>Aquí pronto estarán mis proyectos...</p>
+
+  <header class="header">
+    <h1>Hola, soy Yael Ramírez 👋</h1>
+    <h2>Desarrollador Frontend</h2>
+
+    <p class="biography">
+      Soy Desarrollador Frontend en etapa de crecimiento profesional, con experiencia
+      práctica desarrollando una aplicación web completa desde cero. Mi proyecto
+      principal incluye autenticación de usuarios, gestión de perfiles, consumo de APIs
+      y CRUD de contenido multimedia. Trabajo con HTML5, CSS3 y JavaScript moderno,
+      aplicando buenas prácticas y programación orientada a objetos.
+    </p>
+
+    <div class="header-actions">
+      <a href="#projects">Ver proyecto</a>
+      <a href="https://github.com/yaelramirez11" target="_blank">GitHub</a>
+    </div>
+  </header>
+
+  <main>
+    <section id="projects">
+      <h2>Proyectos</h2>
+
+      <article class="project">
+        <h3>Around the US</h3>
+        <p>
+          Proyecto principal desarrollado de forma integral que simula una aplicación
+          web real. Permite a los usuarios registrarse, gestionar perfiles, compartir
+          fotografías, interactuar mediante likes y realizar operaciones CRUD completas.
+        </p>
+        <p>
+          <strong>Tecnologías:</strong> HTML5, CSS3, JavaScript (ES6+), APIs REST, diseño responsive.
+        </p>
+
+        <a href="https://github.com/yaelramirez11/yaelramirez11" target="_blank">
+          Ver código
+        </a>
+      </article>
+    </section>
+  </main>
+
 </body>
 </html>
