--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="header-actions">
       <a href="#projects">Ver proyecto</a>
-      <a href="https://github.com/yaelramirez11" target="_blank">GitHub</a>
+      <a href="https://yaelramirez11.github.io/web_project_around/" target="_blank">GitHub</a>
     </div>
   </header>
 
@@ -39,10 +39,6 @@
         <p>
           <strong>Tecnologías:</strong> HTML5, CSS3, JavaScript (ES6+), APIs REST, diseño responsive.
         </p>
-
-        <a href="https://github.com/yaelramirez11/yaelramirez11" target="_blank">
-          Ver código
-        </a>
       </article>
     </section>
   </main>
