--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
     <div class="header-actions">
       <a href="#projects">Ver proyecto</a>
-      <a href="https://yaelramirez11.github.io/web_project_around/" target="_blank">GitHub</a>
+      <a href="https://github.com/yaelramirez11" target="_blank">GitHub</a>
     </div>
   </header>
 
   <main>
     <section id="projects">
-      <h2>Proyectos</h2>
+      <h2>Proyecto</h2>
 
       <article class="project">
         <h3>Around the US</h3>
@@ -36,12 +36,23 @@
           web real. Permite a los usuarios registrarse, gestionar perfiles, compartir
           fotografías, interactuar mediante likes y realizar operaciones CRUD completas.
         </p>
+
         <p>
           <strong>Tecnologías:</strong> HTML5, CSS3, JavaScript (ES6+), APIs REST, diseño responsive.
         </p>
+
+        <div class="project-links">
+          <a href="https://yaelramirez11.github.io/web_project_around/" target="_blank">
+            🌐 Ver demo
+          </a>
+          <a href="https://github.com/yaelramirez11/web_project_around" target="_blank">
+            💻 Ver código
+          </a>
+        </div>
       </article>
     </section>
   </main>
 
 </body>
 </html>
+
