--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     </p>
 
     <div class="header-actions">
-      <a href="#projects">Ver proyecto</a>
-      <a href="https://github.com/yaelramirez11" target="_blank">GitHub</a>
+      <a href="https://github.com/yaelramirez11" target="_blank">Ver GitHub</a>
     </div>
   </header>
 
@@ -43,8 +42,9 @@
 
         <div class="project-links">
           <a href="https://yaelramirez11.github.io/web_project_around/" target="_blank">
-            🌐 Ver demo
+            🌐 Ver aplicación web
           </a>
+          
           <a href="https://github.com/yaelramirez11/web_project_around" target="_blank">
             💻 Ver código
           </a>
