--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -25,7 +26,7 @@
   </header>
 
   <main>
-    <section id="projects">
+    <section class="projects">
       <h2>Proyecto</h2>
 
       <article class="project">
@@ -50,6 +51,11 @@
           </a>
         </div>
       </article>
+    </section>
+    <section class="contact">
+      <h2 class="info">Contacto</h2>
+      <p>Correo electrónico: yaleramso@gmail.com</p>
+      <p>Github: yaelramirez11</p>
     </section>
   </main>
 
