--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <h2>Desarrollador Frontend</h2>
 
     <p class="biography">
-      Soy Desarrollador Frontend en etapa de crecimiento profesional, con experiencia
-      práctica desarrollando una aplicación web completa desde cero. Mi proyecto
-      principal incluye autenticación de usuarios, gestión de perfiles, consumo de APIs
-      y CRUD de contenido multimedia. Trabajo con HTML5, CSS3 y JavaScript moderno,
-      aplicando buenas prácticas y programación orientada a objetos.
+      Soy Desarrollador Frontend en etapa de crecimiento profesional, con experiencia práctica desarrollando una aplicación web completa desde cero.
+Mi proyecto principal incluye autenticación de usuarios, gestión de perfiles, consumo de APIs y CRUD de contenido multimedia.
+Trabajo con HTML5, CSS3 y JavaScript moderno, aplicando buenas prácticas y programación orientada a objetos.
+Me caracterizo por la disciplina, el trabajo en equipo y la comunicación clara, con enfoque en entender las necesidades del cliente y entregar soluciones funcionales y bien estructuradas.
     </p>
 
     <div class="header-actions">
