--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ Me caracterizo por la disciplina, el trabajo en equipo y la comunicación clara,
     <section class="contact">
       <h2 class="info">Contacto</h2>
       <p>Correo electrónico: yaleramso@gmail.com</p>
-      <p>Github: yaelramirez11</p>
+      <p>LinkedIn: yaelramirez11</p>
+      <a href="https://github.com/yaelramirez11" target="_blank">Perfil de GitHub</a>
     </section>
   </main>
 
