--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@ Me caracterizo por la disciplina, el trabajo en equipo y la comunicación clara,
         </p>
 
         <p>
+          <div class="project-images">
+    <img src="" alt="Página principal de Around the US">
+    <img src="" alt="Formulario de perfil de usuario">
+    <img src="" alt="Formulario para subir fotos">
+</div>
           <strong>Tecnologías:</strong> HTML5, CSS3, JavaScript (ES6+), APIs REST, diseño responsive.
         </p>
 
