--- a/index.html
+++ b/index.html
@@ -1,69 +1,96 @@
-
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yael Ramírez | Desarrollador Frontend</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Yael Ramírez | Desarrollador Frontend</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body class="body">
+    <header class="header">
+      <h1 class="titles">Yael Ramírez</h1>
+      <h2 class="subtitles">Desarrollador Frontend 🌐💻</h2>
 
-  <header class="header">
-    <h1>Hola, soy Yael Ramírez 👋</h1>
-    <h2>Desarrollador Frontend</h2>
+      <p class="text">
+        Soy Desarrollador Frontend en etapa de crecimiento profesional, con
+        experiencia práctica desarrollando una aplicación web completa desde
+        cero. Mi proyecto principal incluye autenticación de usuarios, gestión
+        de perfiles, consumo de APIs y CRUD de contenido multimedia. Trabajo con
+        HTML5, CSS3 y JavaScript moderno, aplicando buenas prácticas y
+        programación orientada a objetos. Me caracterizo por la disciplina, el
+        trabajo en equipo y la comunicación clara, con enfoque en entender las
+        necesidades del cliente y entregar soluciones funcionales y bien
+        estructuradas.
+      </p>
 
-    <p class="biography">
-      Soy Desarrollador Frontend en etapa de crecimiento profesional, con experiencia práctica desarrollando una aplicación web completa desde cero.
-Mi proyecto principal incluye autenticación de usuarios, gestión de perfiles, consumo de APIs y CRUD de contenido multimedia.
-Trabajo con HTML5, CSS3 y JavaScript moderno, aplicando buenas prácticas y programación orientada a objetos.
-Me caracterizo por la disciplina, el trabajo en equipo y la comunicación clara, con enfoque en entender las necesidades del cliente y entregar soluciones funcionales y bien estructuradas.
-    </p>
+      <div class="header-actions">
+        <a href="https://github.com/yaelramirez11" target="_blank" class="link"
+          >Ver GitHub</a
+        >
+      </div>
+    </header>
 
-    <div class="header-actions">
-      <a href="https://github.com/yaelramirez11" target="_blank">Ver GitHub</a>
-    </div>
-  </header>
+    <main>
+      <section class="projects">
+        <h2 class="subtitles">Proyecto</h2>
 
-  <main>
-    <section class="projects">
-      <h2>Proyecto</h2>
+        <article class="project">
+          <h3 class="sub-subtitle">Around the US</h3>
+          <p class="text">
+            Proyecto principal desarrollado de forma integral que simula una
+            aplicación web real. Permite a los usuarios registrarse, gestionar
+            perfiles, compartir fotografías, interactuar mediante likes y
+            realizar operaciones CRUD completas.
+          </p>
+          <div class="gallery-images">
+            <img
+              class="image"
+              src="./images/Formulario.png"
+              alt="Formulario de perfil de usuario"
+            />
+            <img
+              class="image-vertical"
+              src="./images/Página-principal.png"
+              alt="Página principal de Around the US"
+            />
+            <img
+              class="image"
+              src="./images/Validacion-de-formulario.png"
+              alt="Validación de formulario"
+            />
+          </div>
+          <p class="text">
+            <strong class="text">Tecnologías:</strong> HTML5, CSS3, JavaScript
+            (ES6+), APIs REST, diseño responsive.
+          </p>
 
-      <article class="project">
-        <h3>Around the US</h3>
-        <p>
-          Proyecto principal desarrollado de forma integral que simula una aplicación
-          web real. Permite a los usuarios registrarse, gestionar perfiles, compartir
-          fotografías, interactuar mediante likes y realizar operaciones CRUD completas.
-        </p>
+          <div class="project-links">
+            <a
+              href="https://yaelramirez11.github.io/web_project_around/"
+              target="_blank"
+              class="link"
+            >
+              🌐 Ver aplicación web
+            </a>
 
-        <p>
-          <div class="project-images">
-    <img src="" alt="Página principal de Around the US">
-    <img src="" alt="Formulario de perfil de usuario">
-    <img src="" alt="Formulario para subir fotos">
-</div>
-          <strong>Tecnologías:</strong> HTML5, CSS3, JavaScript (ES6+), APIs REST, diseño responsive.
-        </p>
-
-        <div class="project-links">
-          <a href="https://yaelramirez11.github.io/web_project_around/" target="_blank">
-            🌐 Ver aplicación web
-          </a>
-          
-          <a href="https://github.com/yaelramirez11/web_project_around" target="_blank">
-            💻 Ver código
-          </a>
-        </div>
-      </article>
-    </section>
-    <section class="contact">
-      <h2 class="info">Contacto</h2>
-      <p>Correo electrónico: yaleramso@gmail.com</p>
-      <p>LinkedIn: yaelramirez11</p>
-      <a href="https://github.com/yaelramirez11" target="_blank">Perfil de GitHub</a>
-    </section>
-  </main>
-
-</body>
+            <a
+              href="https://github.com/yaelramirez11/web_project_around"
+              target="_blank"
+              class="link"
+            >
+              💻 Ver código
+            </a>
+          </div>
+        </article>
+      </section>
+      <section class="contact">
+        <h2 class="subtitles">Contacto</h2>
+        <p class="text">Correo electrónico: yaleramso@gmail.com</p>
+        <p class="text">LinkedIn: yaelramirez11</p>
+        <a href="https://github.com/yaelramirez11" target="_blank" class="link"
+          >Perfil de GitHub</a
+        >
+      </section>
+    </main>
+  </body>
 </html>
-
