--- a/index.html
+++ b/index.html
@@ -32,26 +32,76 @@
 
     <main>
       <section class="projects">
-        <h2 class="subtitles">Proyecto</h2>
-
+        <h2 class="subtitles">Mi trabajo</h2>
         <article class="project">
-          <h3 class="sub-subtitle">Around the US</h3>
+          <h3 class="sub-subtitle">
+            Descripción general del proyecto: Alrededor de los EE.UU.
+          </h3>
+          <div class="description">
+            <img
+              class="image-vertical"
+              src="./images/Página-principal.png"
+              alt="Página principal de Around the US"
+            />
           <p class="text">
-            Proyecto principal desarrollado de forma integral que simula una
-            aplicación web real. Permite a los usuarios registrarse, gestionar
-            perfiles, compartir fotografías, interactuar mediante likes y
-            realizar operaciones CRUD completas.
+            Aplicación web desarrollada con React, centrada en la construcción
+            de una interfaz moderna y responsiva. El proyecto prioriza la
+            organización del código, la reutilización de componentes y una
+            navegación clara entre vistas. Se utilizan APIs para la gestión de
+            datos, JavaScript como base del desarrollo y principios de
+            Programación Orientada a Objetos (POO), aplicando buenas prácticas
+            de desarrollo frontend para lograr una experiencia de usuario
+            intuitiva, con especial atención al diseño, la usabilidad y el
+            mantenimiento del proyecto.
           </p>
+          </div>
+          <p class="sub-subtitle">Funcionalidades</p>
+          <ul class="text">
+            <li>
+              Uso de Git y GitHub para el control de versiones y el trabajo
+              organizado del código.
+            </li>
+            <li>
+              Desarrollo de la interfaz con HTML y CSS modernos, enfocados en un
+              diseño estético, responsivo y consistente.
+            </li>
+            <li>
+              Implementación de Programación Orientada a Objetos (POO) en
+              JavaScript, aplicando principios de organización y reutilización.
+            </li>
+            <li>
+              Uso de clases en JavaScript para estructurar la lógica del
+              frontend.
+            </li>
+            <li>
+              Integración de la API de Tripleten para el almacenamiento y
+              gestión de datos.
+            </li>
+          </ul>
+          <p class="sub-subtitle">Logros</p>
+          <ul class="text">
+            <li>
+              Implementación de formularios interactivos para la edición del
+              perfil de usuario y la creación de nuevas tarjetas
+            </li>
+            <li>
+              Desarrollo de un sistema de autenticación de usuarios que permite
+              modificar la foto de perfil
+            </li>
+            <li>
+              Control de permisos para la eliminación de tarjetas personales,
+              garantizando que solo el usuario propietario pueda eliminarlas
+            </li>
+            <li>
+              Gestión del estado de “me gusta”, permitiendo a cada usuario
+              guardar sus interacciones de forma individual
+            </li>
+          </ul>
           <div class="gallery-images">
             <img
               class="image"
               src="./images/Formulario.png"
               alt="Formulario de perfil de usuario"
-            />
-            <img
-              class="image-vertical"
-              src="./images/Página-principal.png"
-              alt="Página principal de Around the US"
             />
             <img
               class="image"
@@ -85,11 +135,12 @@
       </section>
       <section class="contact">
         <h2 class="subtitles">Contacto</h2>
-        <p class="text">Correo electrónico: yaleramso@gmail.com</p>
-        <p class="text">LinkedIn: yaelramirez11</p>
-        <a href="https://github.com/yaelramirez11" target="_blank" class="link"
-          >Perfil de GitHub</a
-        >
+        <ul class="text">
+          <li>Correo electrónico: yaleramso@gmail.com</li>
+          <li>LinkedIn: yaelramirez</li>
+          <li><a href="https://github.com/yaelramirez11" target="_blank" class="link"
+          >Perfil de GitHub</li>
+        </ul>
       </section>
     </main>
   </body>
