--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="html">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
   <body class="body">
     <header class="header">
       <h1 class="titles">Yael Ramírez</h1>
-      <h2 class="subtitles">Desarrollador Frontend 🌐💻</h2>
+      <h2 class="subtitle">Desarrollador Frontend</h2>
 
       <p class="text">
         Soy Desarrollador Frontend en etapa de crecimiento profesional, con
@@ -39,21 +39,21 @@
           </h3>
           <div class="description">
             <img
-              class="image-vertical"
+              class="image image-vertical"
               src="./images/Página-principal.png"
               alt="Página principal de Around the US"
             />
-          <p class="text">
-            Aplicación web desarrollada con React, centrada en la construcción
-            de una interfaz moderna y responsiva. El proyecto prioriza la
-            organización del código, la reutilización de componentes y una
-            navegación clara entre vistas. Se utilizan APIs para la gestión de
-            datos, JavaScript como base del desarrollo y principios de
-            Programación Orientada a Objetos (POO), aplicando buenas prácticas
-            de desarrollo frontend para lograr una experiencia de usuario
-            intuitiva, con especial atención al diseño, la usabilidad y el
-            mantenimiento del proyecto.
-          </p>
+            <p class="text">
+              Aplicación web desarrollada con React, centrada en la construcción
+              de una interfaz moderna y responsiva. El proyecto prioriza la
+              organización del código, la reutilización de componentes y una
+              navegación clara entre vistas. Se utilizan APIs para la gestión de
+              datos, JavaScript como base del desarrollo y principios de
+              Programación Orientada a Objetos (POO), aplicando buenas prácticas
+              de desarrollo frontend para lograr una experiencia de usuario
+              intuitiva, con especial atención al diseño, la usabilidad y el
+              mantenimiento del proyecto.
+            </p>
           </div>
           <p class="sub-subtitle">Funcionalidades</p>
           <ul class="text">
@@ -110,8 +110,8 @@
             />
           </div>
           <p class="text">
-            <strong class="text">Tecnologías:</strong> HTML5, CSS3, JavaScript
-            (ES6+), APIs REST, diseño responsive.
+            <strong>Tecnologías:</strong> HTML5, CSS3, JavaScript (ES6+), APIs
+            REST, diseño responsive.
           </p>
 
           <div class="project-links">
@@ -120,7 +120,7 @@
               target="_blank"
               class="link"
             >
-              🌐 Ver aplicación web
+              Ver aplicación web |
             </a>
 
             <a
@@ -128,7 +128,7 @@
               target="_blank"
               class="link"
             >
-              💻 Ver código
+              | Ver código
             </a>
           </div>
         </article>
@@ -138,8 +138,14 @@
         <ul class="text">
           <li>Correo electrónico: yaleramso@gmail.com</li>
           <li>LinkedIn: yaelramirez</li>
-          <li><a href="https://github.com/yaelramirez11" target="_blank" class="link"
-          >Perfil de GitHub</li>
+          <li>
+            <a
+              href="https://github.com/yaelramirez11"
+              target="_blank"
+              class="link"
+              >Perfil de GitHub</a
+            >
+          </li>
         </ul>
       </section>
     </main>
