--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="description">
             <img
               class="image image-vertical"
-              src="./images/Página-principal.png"
+              src="./images/Pagina-principal.png"
               alt="Página principal de Around the US"
             />
             <p class="text">
@@ -109,10 +109,40 @@
               alt="Validación de formulario"
             />
           </div>
-          <p class="text">
-            <strong>Tecnologías:</strong> HTML5, CSS3, JavaScript (ES6+), APIs
-            REST, diseño responsive.
+          <p class="subtitles">
+            <strong>Tecnologías:</strong>
           </p>
+          <div class="text">
+            <figure>
+              <img src="./images/html5.svg" alt="HTML5" />
+              <figcaption>HTML5</figcaption>
+            </figure>
+
+            <figure>
+              <img src="./images/css.svg" alt="CSS3" />
+              <figcaption>CSS3</figcaption>
+            </figure>
+
+            <figure>
+              <img src="./images/javascript.svg" alt="JavaScript" />
+              <figcaption>JavaScript</figcaption>
+            </figure>
+
+            <figure>
+              <img src="./images/git.svg" alt="Git" />
+              <figcaption>Git</figcaption>
+            </figure>
+
+            <figure>
+              <img src="./images/github.svg" alt="Github" />
+              <figcaption>Github</figcaption>
+            </figure>
+
+            <figure>
+              <img src="./images/figma.svg" alt="Figma" />
+              <figcaption>Figma</figcaption>
+            </figure>
+          </div>
 
           <div class="project-links">
             <a
@@ -134,19 +164,24 @@
         </article>
       </section>
       <section class="contact">
-        <h2 class="subtitles">Contacto</h2>
-        <ul class="text">
-          <li>Correo electrónico: yaleramso@gmail.com</li>
-          <li>LinkedIn: yaelramirez</li>
-          <li>
-            <a
-              href="https://github.com/yaelramirez11"
-              target="_blank"
-              class="link"
-              >Perfil de GitHub</a
-            >
-          </li>
-        </ul>
+        <h2 class="subtitles">Contáctame</h2>
+        <div class="text">
+          <a href="mailto:yaleramso@gmail.com">
+            <img src="./images/gmail.svg" alt="Gmail" />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/yael-ram%C3%ADrez-354410263/"
+            target="_blank"
+          >
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
+              alt="LinkedIn"
+            />
+          </a>
+          <a href="https://github.com/yaelramirez11" target="_blank">
+            <img src="./images/github.svg" alt="GitHub" />
+          </a>
+        </div>
       </section>
     </main>
   </body>
